# zynq-img-proc-pipeline

./: .gitignore  AGENT_README.md  PLAN.md  data.dvc  pyproject.toml
.dvc/: config
examples/: cli_examples.md  python_combine.py  python_linear.py
saved_commands/: ir_test0.txt
src/: README.md  __init__.py  cli.py
src/lib/: __init__.py  cli_parse.py  contracts.py  elements.py  opencv_qt.py  packets.py  pipeline.py  registry.py
src/sinks/: __init__.py  displaysink.py  filesink.py
src/sources/: __init__.py  filesrc.py
src/transformers/: __init__.py  _filter_utils.py  bilateral.py  bit_shift.py  bypass.py  clahe.py  combine.py  debug.py  deflicker.py  dog.py  dtype_convert.py  edge_enhance.py  fan_out.py  frame_diff_debug.py  gaussian.py  guided_filter.py  hist_equalize.py  interlace_mimic_test.py  laplacian_sharp.py  linear_scale.py  local_contrast.py  log_filter.py  meam.py  median.py  mono_to_color.py  morphology.py  nl_means.py  non_linear.py  progress.py  resize.py  retinex.py  rolling_background.py  sharpen_kernel.py  temporal_denoise.py  text_overlay.py  tone_curve.py  tv_denoise.py  unsharp.py  wavelet_denoise.py
src/transformers/control/: __init__.py
src/transformers/gui/: __init__.py
tests/: test_pipeline.py
