[project]
name = "zynq-img-proc-pipeline"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dvc[s3]>=3.67.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.26.0",
]

[project.scripts]
zpipe = "src.cli:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
